--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,14 +1,10 @@
-<div id="header">
+<header id="header" class="header">
         <div>
 		    <ul>
-			    <li><a href="#idea" class="on">home</a></li>
-                <li><a href="#code">work detail</a></li>
-                <li><a href="#author">projects</a></li>
-                <li><a href="#contact">expenses</a></li>
-                <li><a href="#contact">accounting</a></li>
-                <li><a href="#contact">other</a></li>
+			    <li><%= link_to "Home",    '#' %></li>
+			    <li><%= link_to "Help",    '#' %></li>
+			    
             </ul>
-            <h1><a href="#">I Consult</a></h1>
 	    </div>
-</div>    
+</header>    
 
