--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,10 +1,11 @@
-<header id="header" class="header">
+<header class="header">
         <div>
 		    <ul>
 			    <li><%= link_to "Home",    '#' %></li>
 			    <li><%= link_to "Help",    '#' %></li>
 			    
             </ul>
+            <h1>IConsult</h1>
 	    </div>
 </header>    
 
