--- a/app/views/shared/_left_menu.html.erb
+++ b/app/views/shared/_left_menu.html.erb
@@ -1,11 +1,11 @@
-<div id="left">
+<left class="left">
 					
-			<h2><em>Links</em></h2>			
+			<h2><em>Menu</em></h2>			
 			<ul>
-				<li><%= link_to "Home", :action => "index" %></li>	
+				<li><%= link_to "Home", '#' %></li>	
 				
 			</ul>
 			
 	</div>
-</div>
+</left>
 
