--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, 'Home') %>
-
-<h1>IConsult</h1>
+<div class="right">
+<h2>Welcome</h2>
 <p>
   Place holder for IConsult home page
 </p>
+</div>
