--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,14 @@
       <% flash.each do |key, value| %>
         <%= content_tag(:div, value, :class => "alert alert-#{key}") %>
       <% end %>
+      <div class="content">
+ 
       <%= yield %>
+      <%= render 'shared/left_menu' %>
+
+      </div>
       <%= render 'shared/footer' %>
+      
       <%= debug(params) if Rails.env.development? %>
     </div>
 
