--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer">
 	<!-- Please select "design by growldesign" if you leave the design as is or "inspired by growldesign" if you make any changes. -->
 	<!-- It is not an imperitive that you leave a link to my site but I would appreciate it -->  
-	<p>Copyright &copy; 2006 Company. All Rights Reserved. <a href="http://validator.w3.org/check/referer">XHTML 1.1</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer?warning=no&amp;profile=css2">CSS</a> | design/inspired by <a href="http://www.growldesign.co.uk">growldesign</a></p>
+	<p>Copyright &copy; 2006 Company. All Rights Reserved. </p>
 </footer>
