Removed unneeded style sheets

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
       <% end %>
       <div class="content">
  
+ 	  <div class='right'>
       <%= yield %>
+      </div>
       <%= render 'shared/left_menu' %>
 
       </div>
