Updating basic links and start of signup page

--- a/app/views/shared/_left_menu.html.erb
+++ b/app/views/shared/_left_menu.html.erb
@@ -1,8 +1,8 @@
 <left class="left">
 					
-			<h2><em>Menu</em></h2>			
+			<h2><em>Functions</em></h2>			
 			<ul>
-				<li><%= link_to "Home", '#' %></li>	
+				<li><%= link_to "Home", root_path %></li>	
 				
 			</ul>
 			
