--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Home') %>
 <h2>Welcome</h2>
 <p>
-  Place holder for IConsult home page
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </p>
 
