--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,10 @@
 <header class="header">
         <div>
 		    <ul>
-			    <li><%= link_to "Home",    '#' %></li>
-			    <li><%= link_to "Help",    '#' %></li>
-			    
+			    <li><%= link_to "Home",    root_path %></li>
+			    <li><%= link_to "Help",    help_path %></li>
+			    <li><%= link_to "About",   about_path %></li>
+			    <li><%= link_to "Contact", contact_path %></li>
             </ul>
             <h1>IConsult</h1>
 	    </div>
