Fixing styles on buttons

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,9 @@
 <% provide(:title, 'Home') %>
+
 <h2>Welcome</h2>
-<p>
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
-</p>
+<div class="center hero-unit">
+
+
+  <%= link_to "Sign up now!", signup_path, class: "btn" %>
+</div>
 
