--- a/app/views/consultants/new.html.erb
+++ b/app/views/consultants/new.html.erb
@@ -1,6 +1,39 @@
 <% provide(:title, 'Sign up') %>
 <h2>Sign up</h2>
 
-<%= render 'form' %>
+<div>
+		<%= form_for(@consultant) do |f| %>
+		  <%= render 'shared/error_messages' %>
+		  
+		  <table style="border: none">
+		  	 
+		  <tr><td><%= f.label :first_name, "First Name" %></td><td><%= f.text_field :first_name %></td></tr>
+		  
+		  <tr><td><%= f.label :last_name, "Last Name" %></td><td><%= f.text_field :last_name %></td></tr>
+		  
+  		  <tr><td><%= f.label :street %></td><td><%= f.text_field :street %></td></tr>
+
+		  <tr><td><%= f.label :city %></td><td><%= f.text_field :city %></td></tr>
+
+		  <tr><td><%= f.label :state %></td><td><%= f.text_field :state %></td></tr>
+
+		  <tr><td><%= f.label :zipcode %></td><td><%= f.text_field :zipcode %></td></tr>
+		  
+		  <tr><td><%= f.label :email %></td><td><%= f.text_field :email %></td></tr>
+		  
+		  <tr><td><%= f.label :password %></td><td><%= f.password_field :password %></td></tr>
+		  
+		  <tr><td><%= f.label :password_confirmation, "Confirmation" %></td><td><%= f.password_field :password_confirmation %></td></tr>
+
+		  <tr><td><%= f.label :image %></td><td><%= f.text_field :image %></td></tr>
+		  
+		  </table>
+		  
+		  <%= f.submit "Create my account", class: "btn" %>
+		  
+	   <% end %>
+	
+</div>
+
 
 <%= link_to 'Back', consultants_path %>
