--- a/app/views/consultants/show.html.erb
+++ b/app/views/consultants/show.html.erb
@@ -1,4 +1,14 @@
-<p id="notice"><%= notice %></p>
+<% provide(:title, @consultant.last_name) %>
+<div class="row">
+	<aside class="span4">
+		<section>
+			<h1>
+				<%= gravatar_for @consultant %>
+			</h1>
+		</section>
+	</aside>
+</div>
+<div>
 
 <p>
   <b>Last name:</b>
@@ -34,6 +44,7 @@
   <b>Image:</b>
   <%= @consultant.image %>
 </p>
+</div>
 
 
 <%= link_to 'Edit', edit_consultant_path(@consultant) %> |
