Created index page for users

--- a/app/views/shared/_left_menu.html.erb
+++ b/app/views/shared/_left_menu.html.erb
@@ -1,9 +1,15 @@
 <left class="left">
 					
-			<h2><em>Functions</em></h2>			
+			<h2><em>Activities</em></h2>			
 			<ul>
-				<li><%= link_to "Home", root_path %></li>	
-				
+				<li><%= link_to "Clients", '#' %></li>	
+				<li><%= link_to "Contracts", '#' %></li>					
+				<li><%= link_to "Projects", '#' %></li>	
+				<li><%= link_to "Agencies", '#' %></li>	
+				<li><%= link_to "Enter Time", '#' %></li>
+				<li><%= link_to "Enter Pay", '#' %></li>			
+				<li><%= link_to "Create Invoice", '#' %></li>
+				<li><%= link_to "Profile", '#' %></li>				
 			</ul>
 			
 	</div>
