--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,7 @@
 <% provide(:title, 'Home') %>
 
 <h2>Welcome</h2>
-<div class="center hero-unit">
-
+<div class="center">
 
   <%= link_to "Sign up now!", signup_path, class: "btn" %>
 </div>
